# starlette_live

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  publish.yml
assets/: package.json  tsconfig.json
assets/src/: live_view.ts  main.ts
demo/: app.py  components.py
demo/templates/: counter.html  edit_form.html  index.html  layout.html  todo_layout.html  todo_live.html
starlette_live/: components.py  endpoints.py  routing.py  templates.py
starlette_live/statics/live/: _live.js  live.js
tests/: test_routing.py
